--- a/crates/elf-parser/Cargo.toml
+++ b/crates/elf-parser/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+elf = "0.7.4"
+core.workspace = true
+hashbrown.workspace = true
+anyhow.workspace = true
