mod: done with the clean up

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ members = [
     "integration-testing"
 ]
 
-
+exclude = [
+    "rust-test"
+]
 
 [workspace.dependencies]
 core = { path = "crates/core" }
