--- a/bins/emulator/Cargo.toml
+++ b/bins/emulator/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+emulator-sdk = { path = "../../crates/emulator-sdk" }
+clap = {version = "4.5.1", features = ["derive"]}
